# music-manager

./: .gitignore  README.md  pyproject.toml
src/music_manager/: __init__.py  cli.py  spotify.py
tests/: test_music_manager.py
