[project]
name = "music-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Ciani", email = "dciani@davidciani.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pillow<10.0.0,>=9.5.0",
    "blend-modes<3.0.0,>=2.1.0",
    "numpy<2.0.0,>=1.24.3",
    "python-dateutil<3.0.0,>=2.8.2",
    "spotipy<3.0.0,>=2.23.0",
    "python-dotenv<2.0.0,>=1.0.0",
    "pyyaml<7.0.0,>=6.0.1",
]

[project.scripts]
music-manager = "music_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
